Feature Extractor Update and output files

--- a/FeatureExtractor_sandbox.ipynb
+++ b/FeatureExtractor_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[array([ 4.9886043e-05,  1.2957437e-04,  3.0208417e-04, ...,\n",
+       "       -3.1988835e-05, -2.8691908e-05, -3.3227388e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([ 1.6417895e-05, -6.4880284e-04, -5.2967430e-03, ...,\n",
+       "       -2.9894332e-05, -3.0361671e-05, -3.1850708e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-6.95978160e-05,  2.64925271e-04, -2.99041579e-03, ...,\n",
+       "       -1.10152854e-04, -9.74262293e-05, -1.09219036e-04], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([ 3.9245795e-05,  5.5018445e-06, -1.9419534e-03, ...,\n",
+       "       -8.5174946e-08,  7.2827156e-08, -6.0356690e-08], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-1.4754027e-04,  2.1151219e-04, -2.2895583e-03, ...,\n",
+       "       -8.0466918e-07,  8.3107415e-07, -8.3744078e-07], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-1.7993708e-04,  3.2073408e-04, -1.9383996e-03, ...,\n",
+       "       -4.3390723e-05, -5.0770428e-05, -5.4644875e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-2.3793144e-05,  1.4991555e-04, -2.2596093e-03, ...,\n",
+       "        3.2239637e-05,  6.5919908e-06,  2.0822370e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-2.7630102e-05,  5.3922493e-05, -3.0952075e-03, ...,\n",
+       "        4.1296857e-06,  1.0192399e-05,  1.1348884e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([-1.0808329e-04,  2.8753848e-04,  3.2042031e-04, ...,\n",
+       "       -1.8472413e-06,  7.4504726e-07, -2.5818207e-07], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([ 4.2617190e-05,  5.7750469e-05, -4.6515086e-04, ...,\n",
+       "       -3.1039730e-05, -2.9640802e-05, -3.2323936e-05], dtype=float32),\n",
+       "        22050],\n",
+       "       [array([ 7.7679826e-05,  4.1793805e-06, -2.1887927e-04, ...,\n",
+       "       -3.3801847e-05, -2.8225180e-05, -3.3148521e-05], dtype=float32),\n",
+       "        22050]], dtype=object)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snareSamples"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +133,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,26 +172,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 87)\n",
-      "(1, 87)\n",
-      "(1, 87)\n",
-      "(1, 87)\n",
-      "(1, 87)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "22050"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kickSamples[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 87)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,12 +216,12 @@
     "#kickFeat[k][2] -> tonal centroid for kick sample k\n",
     "#kickFeat[k][3] -> mel spec for kick smaple k\n",
     "#kickFeat[k][4] -> mfcs for kick sample k\n",
-    "np.shape(snareFeat[0])"
+    "np.shape(snareFeat[0][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,69 +237,31 @@
     "\n",
     "\n",
     "for s in kickFeat:\n",
-    "    zero_co = np.append(zero_co, [s[0], 0 ])\n",
-    "    cent_freq = np.append(cent_freq, [s[1],0])\n",
-    "    tonal_ctroid = np.append(tonal_ctroid,[s[2],0])\n",
-    "    mfccs = np.append(mfccs, s[4])\n",
-    "#     exp = np.append(zero_co, [s[0], x[1])\n",
+    "    zero_co = np.append(zero_co, [s[0],1])\n",
+    "    cent_freq = np.append(cent_freq, [s[1],1])\n",
+    "    tonal_ctroid = np.append(tonal_ctroid,[s[2],1])\n",
+    "    mfccs = np.append(mfccs, [s[4],1])\n",
+    "\n",
     "for s in snareFeat:\n",
     "    zero_co = np.append(zero_co, [s[0],0])\n",
     "    cent_freq = np.append(cent_freq, [s[1],0])\n",
     "    tonal_ctroid = np.append(tonal_ctroid,[s[2],0])\n",
-    "#     exp = np.append(zero_co, [s[0], s[1])\n",
-    "    \n",
-    "\n"
+    "    mfccs = np.append(mfccs, [s[4],0])\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32,)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.shape(zero_co)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.01025391 0.01269531 0.01513672 0.01367188 0.00927734 0.00878906\n",
-      "  0.00732422 0.00683594 0.00488281 0.00390625 0.00439453 0.00341797\n",
-      "  0.00390625 0.00390625 0.00341797 0.00585938 0.00683594 0.00634766\n",
-      "  0.00585938 0.00390625 0.00292969 0.00439453 0.00537109 0.00878906\n",
-      "  0.01123047 0.01074219 0.01123047 0.00976562 0.00976562 0.01025391\n",
-      "  0.01171875 0.01220703 0.01171875 0.01318359 0.01318359 0.01269531\n",
-      "  0.01318359 0.01318359 0.01269531 0.01318359 0.01269531 0.01269531\n",
-      "  0.01318359 0.01269531 0.01318359 0.01318359 0.01269531 0.01318359\n",
-      "  0.01269531 0.01269531 0.01318359 0.01269531 0.01318359 0.01318359\n",
-      "  0.01269531 0.01318359 0.01269531 0.01269531 0.01318359 0.01269531\n",
-      "  0.01318359 0.01318359 0.01269531 0.01318359 0.01269531 0.01269531\n",
-      "  0.01318359 0.01269531 0.01318359 0.01269531 0.01269531 0.01318359\n",
-      "  0.01367188 0.01416016 0.01416016 0.01367188 0.01318359 0.01318359\n",
-      "  0.01269531 0.01318359 0.01464844 0.01464844 0.01513672 0.015625\n",
-      "  0.01416016 0.01123047 0.0078125 ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(zero_co[0])"
+    "# Uncomment to write features to files\n",
+    "\n",
+    "# zero_co.tofile(\"Extracted_Features\\zcr_features.txt\",sep = \",\",format = \"%s\")\n",
+    "# cent_freq.tofile(\"Extracted_Features\\cfreq_features.txt\",sep = \",\",format = \"%s\")\n",
+    "# tonal_ctroid.tofile(\"Extracted_Features\\tonal_features.txt\",sep = \",\",format = \"%s\")\n",
+    "# mfccs.tofile(\"Extracted_Features\\mfcc_features.txt\",sep = \",\",format = \"%s\")\n"
    ]
   },
   {
